@@ -23,5 +23,6 @@
 @import 'application/html-viewer.scss';
 @import 'application/footer.scss';
 @import 'application/docutils.scss';
+@import 'application/dragndrop.scss';
 /** Load the override SCSS file */
 @import 'overrides.scss';
