@@ -3,10 +3,70 @@
   <xi:include href="../layout/layout.html"/>
   <head>
     <title>${part.title} - Add ${h.text.title(r.matchdict['new_type'])}</title>
+    <script>
+    $(document).ready(function() {
+    	if(window.FileReader) {
+            var article = $('article');
+            article.on('dragenter', function(ev) {
+            	ev.stopPropagation();
+            	ev.preventDefault();
+            	article.addClass('drag-n-drop');
+            });
+            article.on('dragover', function(ev) {
+                ev.stopPropagation();
+                ev.preventDefault();
+                article.addClass('drag-n-drop');
+            });
+            article.on('dragleave', function(ev) {
+                ev.stopPropagation();
+                ev.preventDefault();
+                article.removeClass('drag-n-drop');
+            });
+            article.on('drop', function(ev) {
+                ev.stopPropagation();
+                ev.preventDefault();
+                var dt = ev.originalEvent.dataTransfer;
+                if(dt.files) {
+                	if(dt.files.length != 0) {
+                	    var data = new FormData();
+                	    data.append('data', dt.files[0]);
+                	    article.find('.progress').show();
+                	    var promise = $.ajax($('form').attr('action'), {
+                	    	xhr: function() {
+                	    		var xhr = $.ajaxSettings.xhr();
+                	    		if(xhr.upload) {
+                                    xhr.upload.addEventListener('progress', function(ev) {
+                                        var progress = ev.loaded || ev.position;
+                                        var total = ev.total;
+                                        if(total != 0) {
+                                            article.find('.meter').css('width', progress / total * 100 + '%');
+                                        } else {
+                                            article.find('.meter').css('width', 0);
+                                        }
+                                    }, false);
+                	    		}
+                	    		return xhr;
+                	    	},
+                	    	type: 'POST',
+                	    	contentType: false,
+                	    	processData: false,
+                	    	cache: false,
+                	    	data: data
+                	    });
+                	    promise.then(function() {
+                	    	window.location = '${r.route_url('part.view', pid=part.id)}';
+                	    });
+                    }
+                }
+            });
+    	}
+    });
+    </script>
   </head>
   <body>
     <div class="row left">
       <article class="small-12 medium-10 large-8 column">
+        <div class="drag-n-drop-overlay"><span class="fi-upload"></span><div class="progress"><span class="meter" style="width: 0;"></span></div></div>
         <h1>${part.title} - Add ${h.text.title(r.matchdict['new_type'])}</h1>
         <form action="${r.route_url('asset.new', pid=part.id, new_type=r.matchdict['new_type'])}" method="post" enctype="multipart/form-data">
           <div class="clearfix">
